prepare for intl

--- a/configure.ac
+++ b/configure.ac
@@ -26,6 +26,8 @@ AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
 AM_GLIB_GNU_GETTEXT
 IT_PROG_INTLTOOL([0.35.0])
 
+NRDB_LOCALEDIR=[${datadir}/locale]
+AC_SUBST(NRDB_LOCALEDIR)
 
 
 AM_PROG_LIBTOOL
