--- a/win32/NR-deckbuilder.vcxproj
+++ b/win32/NR-deckbuilder.vcxproj
@@ -45,12 +45,12 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(GTKMM_BASEPATH)\include;$(GTKMM_BASEPATH)\include\freetype2;$(GTKMM_BASEPATH)\include\glib-2.0;$(GTKMM_BASEPATH)\include\cairo;$(GTKMM_BASEPATH)\include\pango-1.0;$(GTKMM_BASEPATH)\include\atk-1.0;$(GTKMM_BASEPATH)\include\gdk-pixbuf-2.0;$(GTKMM_BASEPATH)\include\gtk-2.0;$(GTKMM_BASEPATH)\include\libxml2;$(GTKMM_BASEPATH)\include\libglade-2.0;$(GTKMM_BASEPATH)\include\sigc++-2.0;$(GTKMM_BASEPATH)\include\glibmm-2.4;$(GTKMM_BASEPATH)\include\giomm-2.4;$(GTKMM_BASEPATH)\include\cairomm-1.0;$(GTKMM_BASEPATH)\include\pangomm-1.4;$(GTKMM_BASEPATH)\include\atkmm-1.6;$(GTKMM_BASEPATH)\include\gdkmm-2.4;$(GTKMM_BASEPATH)\include\gtkmm-2.4;$(GTKMM_BASEPATH)\include\libxml++-2.6;$(GTKMM_BASEPATH)\include\libglademm-2.4;$(GTKMM_BASEPATH)\lib\glib-2.0\include;$(GTKMM_BASEPATH)\lib\gtk-2.0\include;$(GTKMM_BASEPATH)\lib\sigc++-2.0\include;$(GTKMM_BASEPATH)\lib\glibmm-2.4\include;$(GTKMM_BASEPATH)\lib\giomm-2.4\include;$(GTKMM_BASEPATH)\lib\cairomm-1.0\include;$(GTKMM_BASEPATH)\lib\pangomm-1.4\include;$(GTKMM_BASEPATH)\lib\atkmm-1.6\include;$(GTKMM_BASEPATH)\lib\gdkmm-2.4\include;$(GTKMM_BASEPATH)\lib\gtkmm-2.4\include;$(GTKMM_BASEPATH)\lib\libxml++-2.6\include;$(GTKMM_BASEPATH)\lib\libglademm-2.4\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4250</DisableSpecificWarnings>
+      <AdditionalIncludeDirectories>$(GTKMM_BASEPATH)\include;$(GTKMM_BASEPATH)\include\freetype2;$(GTKMM_BASEPATH)\include\glib-2.0;$(GTKMM_BASEPATH)\include\cairo;$(GTKMM_BASEPATH)\include\pango-1.0;$(GTKMM_BASEPATH)\include\atk-1.0;$(GTKMM_BASEPATH)\include\gdk-pixbuf-2.0;$(GTKMM_BASEPATH)\include\gtk-2.0;$(GTKMM_BASEPATH)\include\libxml2;$(GTKMM_BASEPATH)\include\libglade-2.0;$(GTKMM_BASEPATH)\include\sigc++-2.0;$(GTKMM_BASEPATH)\include\glibmm-2.4;$(GTKMM_BASEPATH)\include\giomm-2.4;$(GTKMM_BASEPATH)\include\cairomm-1.0;$(GTKMM_BASEPATH)\include\pangomm-1.4;$(GTKMM_BASEPATH)\include\atkmm-1.6;$(GTKMM_BASEPATH)\include\gdkmm-2.4;$(GTKMM_BASEPATH)\include\gtkmm-2.4;$(GTKMM_BASEPATH)\include\libxml++-2.6;$(GTKMM_BASEPATH)\include\libglademm-2.4;$(GTKMM_BASEPATH)\lib\glib-2.0\include;$(GTKMM_BASEPATH)\lib\gtk-2.0\include;$(GTKMM_BASEPATH)\lib\sigc++-2.0\include;$(GTKMM_BASEPATH)\lib\glibmm-2.4\include;$(GTKMM_BASEPATH)\lib\giomm-2.4\include;$(GTKMM_BASEPATH)\lib\cairomm-1.0\include;$(GTKMM_BASEPATH)\lib\pangomm-1.4\include;$(GTKMM_BASEPATH)\lib\atkmm-1.6\include;$(GTKMM_BASEPATH)\lib\gdkmm-2.4\include;$(GTKMM_BASEPATH)\lib\gtkmm-2.4\include;$(GTKMM_BASEPATH)\lib\libxml++-2.6\include;$(GTKMM_BASEPATH)\lib\libglademm-2.4\include;.</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4250;4290;4099</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -61,17 +61,20 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <DisableSpecificWarnings>4250;4290;4099</DisableSpecificWarnings>
+      <AdditionalIncludeDirectories>$(GTKMM_BASEPATH)\include;$(GTKMM_BASEPATH)\include\freetype2;$(GTKMM_BASEPATH)\include\glib-2.0;$(GTKMM_BASEPATH)\include\cairo;$(GTKMM_BASEPATH)\include\pango-1.0;$(GTKMM_BASEPATH)\include\atk-1.0;$(GTKMM_BASEPATH)\include\gdk-pixbuf-2.0;$(GTKMM_BASEPATH)\include\gtk-2.0;$(GTKMM_BASEPATH)\include\libxml2;$(GTKMM_BASEPATH)\include\libglade-2.0;$(GTKMM_BASEPATH)\include\sigc++-2.0;$(GTKMM_BASEPATH)\include\glibmm-2.4;$(GTKMM_BASEPATH)\include\giomm-2.4;$(GTKMM_BASEPATH)\include\cairomm-1.0;$(GTKMM_BASEPATH)\include\pangomm-1.4;$(GTKMM_BASEPATH)\include\atkmm-1.6;$(GTKMM_BASEPATH)\include\gdkmm-2.4;$(GTKMM_BASEPATH)\include\gtkmm-2.4;$(GTKMM_BASEPATH)\include\libxml++-2.6;$(GTKMM_BASEPATH)\include\libglademm-2.4;$(GTKMM_BASEPATH)\lib\glib-2.0\include;$(GTKMM_BASEPATH)\lib\gtk-2.0\include;$(GTKMM_BASEPATH)\lib\sigc++-2.0\include;$(GTKMM_BASEPATH)\lib\glibmm-2.4\include;$(GTKMM_BASEPATH)\lib\giomm-2.4\include;$(GTKMM_BASEPATH)\lib\cairomm-1.0\include;$(GTKMM_BASEPATH)\lib\pangomm-1.4\include;$(GTKMM_BASEPATH)\lib\atkmm-1.6\include;$(GTKMM_BASEPATH)\lib\gdkmm-2.4\include;$(GTKMM_BASEPATH)\lib\gtkmm-2.4\include;$(GTKMM_BASEPATH)\lib\libxml++-2.6\include;$(GTKMM_BASEPATH)\lib\libglademm-2.4\include;.</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;$(GTKMM_BASEPATH)\lib\glademm-vc100-2_4.lib;$(GTKMM_BASEPATH)\lib\xml++-vc100-2_6.lib;$(GTKMM_BASEPATH)\lib\gtkmm-vc100-2_4.lib;$(GTKMM_BASEPATH)\lib\gdkmm-vc100-2_4.lib;$(GTKMM_BASEPATH)\lib\atkmm-vc100-1_6.lib;$(GTKMM_BASEPATH)\lib\pangomm-vc100-1_4.lib;$(GTKMM_BASEPATH)\lib\cairomm-vc100-1_0.lib;$(GTKMM_BASEPATH)\lib\giomm-vc100-2_4.lib;$(GTKMM_BASEPATH)\lib\glibmm-vc100-2_4.lib;$(GTKMM_BASEPATH)\lib\sigc-vc100-2_0.lib;$(GTKMM_BASEPATH)\lib\glade-2.0.lib;$(GTKMM_BASEPATH)\lib\libxml2.lib;$(GTKMM_BASEPATH)\lib\gtk-win32-2.0.lib;$(GTKMM_BASEPATH)\lib\gdk-win32-2.0.lib;$(GTKMM_BASEPATH)\lib\gdk_pixbuf-2.0.lib;$(GTKMM_BASEPATH)\lib\atk-1.0.lib;$(GTKMM_BASEPATH)\lib\pangowin32-1.0.lib;$(GTKMM_BASEPATH)\lib\pangocairo-1.0.lib;$(GTKMM_BASEPATH)\lib\pango-1.0.lib;$(GTKMM_BASEPATH)\lib\cairo.lib;$(GTKMM_BASEPATH)\lib\gio-2.0.lib;$(GTKMM_BASEPATH)\lib\gobject-2.0.lib;$(GTKMM_BASEPATH)\lib\gmodule-2.0.lib;$(GTKMM_BASEPATH)\lib\glib-2.0.lib;$(GTKMM_BASEPATH)\lib\intl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -88,10 +91,6 @@
     <ClCompile Include="..\src\pdf.cc" />
     <ClCompile Include="..\src\s-q-l-error.cc" />
     <ClCompile Include="..\src\sqlite3.c" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
