--- a/win32/NR-deckbuilder.vcxproj
+++ b/win32/NR-deckbuilder.vcxproj
@@ -48,7 +48,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;DEV_BUILD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>C:\perso\hpdf\bin\include;$(GTKMM_BASEPATH)\include;$(GTKMM_BASEPATH)\include\freetype2;$(GTKMM_BASEPATH)\include\glib-2.0;$(GTKMM_BASEPATH)\include\cairo;$(GTKMM_BASEPATH)\include\pango-1.0;$(GTKMM_BASEPATH)\include\atk-1.0;$(GTKMM_BASEPATH)\include\gdk-pixbuf-2.0;$(GTKMM_BASEPATH)\include\gtk-2.0;$(GTKMM_BASEPATH)\include\libxml2;$(GTKMM_BASEPATH)\include\libglade-2.0;$(GTKMM_BASEPATH)\include\sigc++-2.0;$(GTKMM_BASEPATH)\include\glibmm-2.4;$(GTKMM_BASEPATH)\include\giomm-2.4;$(GTKMM_BASEPATH)\include\cairomm-1.0;$(GTKMM_BASEPATH)\include\pangomm-1.4;$(GTKMM_BASEPATH)\include\atkmm-1.6;$(GTKMM_BASEPATH)\include\gdkmm-2.4;$(GTKMM_BASEPATH)\include\gtkmm-2.4;$(GTKMM_BASEPATH)\include\libxml++-2.6;$(GTKMM_BASEPATH)\include\libglademm-2.4;$(GTKMM_BASEPATH)\lib\glib-2.0\include;$(GTKMM_BASEPATH)\lib\gtk-2.0\include;$(GTKMM_BASEPATH)\lib\sigc++-2.0\include;$(GTKMM_BASEPATH)\lib\glibmm-2.4\include;$(GTKMM_BASEPATH)\lib\giomm-2.4\include;$(GTKMM_BASEPATH)\lib\cairomm-1.0\include;$(GTKMM_BASEPATH)\lib\pangomm-1.4\include;$(GTKMM_BASEPATH)\lib\atkmm-1.6\include;$(GTKMM_BASEPATH)\lib\gdkmm-2.4\include;$(GTKMM_BASEPATH)\lib\gtkmm-2.4\include;$(GTKMM_BASEPATH)\lib\libxml++-2.6\include;$(GTKMM_BASEPATH)\lib\libglademm-2.4\include;.</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4250;4290;4099;4244</DisableSpecificWarnings>
       <AdditionalOptions>/vd2 %(AdditionalOptions)</AdditionalOptions>
@@ -95,6 +95,7 @@
     <ClCompile Include="..\src\pdf.cc" />
     <ClCompile Include="..\src\s-q-l-error.cc" />
     <ClCompile Include="..\src\sqlite3.c" />
+    <ClCompile Include="..\src\tournament.cc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\hpdf\libharu-2.2.1\winharu\winharu.vcxproj">
